# EllieSmelly

./: .gitignore  Makefile  README.md  platformio.ini  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  home.c  httpSimpleClient.c  identified.c  keyboard.c  main.c  received.c  selection.c  sgp30.c
main/corehttp/: core_http_client.c
main/includes/: core_http_config.h  cta.h  global.h  httpSimpleClient.c  identified.h  keyboard.h  received.h  selection.h
